<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#CC000000"
    android:orientation="vertical"
    tools:ignore="Overdraw"
    tools:keep="@layout/layout_exo_playback_control_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp">

        <ImageButton
            android:id="@+id/prev"
            style="@style/ExoMediaButton.Previous"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:id="@id/exo_rew"
            style="@style/ExoMediaButton.Rewind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/rewind" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@id/exo_play"
                style="@style/ExoMediaButton.Play"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/play" />

            <ImageButton
                android:id="@id/exo_pause"
                style="@style/ExoMediaButton.Pause"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pause" />

        </FrameLayout>

        <ImageButton
            android:id="@id/exo_ffwd"
            style="@style/ExoMediaButton.FastForward"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/fast_forward" />

        <ImageButton
            android:id="@+id/next"
            style="@style/ExoMediaButton.Next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/next" />

        <ImageButton
            android:id="@+id/fullscreen_enter"
            style="@style/ExoMediaButton.Next"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:contentDescription="@string/enter_fullscreen"
            android:scaleType="fitCenter"
            android:src="@drawable/exo_controls_fullscreen_enter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
