<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:contentDescription="@string/cupcake_icon_cd"
            android:paddingBottom="8dp"
            android:paddingEnd="4dp"
            android:paddingLeft="0dp"
            android:paddingRight="4dp"
            android:paddingStart="0dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="8dp"
            android:scaleType="centerInside"
            tools:srcCompat="@drawable/ic_cupcake" />

        <TextView
            android:id="@+id/widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorTitle"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/widget_configure"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/configure"
            tools:srcCompat="@drawable/ic_configure" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <ListView
        android:id="@+id/widget_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
